# prefect-example

./: .envrc  .gitignore  bq.py  main.py  main4.py  pyproject.toml
docs/: memo.md
firststep/: main10.py  main11.py  main12.py  main13.py  main14.py  main15.py  main16.py  main17.py  main18.py  main2.py  main3.py  main5.py  main6.py  main7.py  main8.py  main9.py
